@@ -40,7 +40,7 @@ $cfg_db['Servers'] = array(1 => array(
     'AllowDeny'    => array(
         'order'    => array('', 'deny,allow', 'allow,deny', 'explicit')),
     'only_db'      => 'array'));
-$cfg_db['RecodingEngine'] = array('auto', 'iconv', 'recode');
+$cfg_db['RecodingEngine'] = array('auto', 'iconv', 'recode', 'none');
 $cfg_db['OBGzip'] = array('auto', true, false);
 $cfg_db['ShowTooltipAliasTB'] = array('nested', true, false);
 $cfg_db['DisplayDatabasesList'] = array('auto', true, false);
