@@ -87,6 +87,7 @@ $Id$
   thanks to Piotr Przybylski  - crackpl
 - bug [password] Generate password only available if JS is enabled
   (fixed for Privileges and Change password)
+- [core] RecodingEngine now accepts none as valid option.
 
 3.3.6.0 (not yet released)
 
